@startuml test
hide circle
skinparam linetype ortho

entity "users" {
  + uuid : uuid : <<PK>>
  + name : string : ユーザ名
  + created_at : datetime : 作成日時
  + updated_at : datetime : 更新日時
}

entity "seasons" {
  + uuid : uuid : <<PK>>
  + start_day : date : 開始日
  + end_day : date : 終了日
  + season_name : string : シーズン名
  + game_format : string : 試合形式
  + code : string : シーズンコード
  + user_id : uuid : ユーザID
  + created_at : datetime : 作成日時
  + updated_at : datetime : 更新日時
}

entity "teams" {
  + uuid : uuid : <<PK>>
  + name : string : チーム名
  + code : string : チームコード
  + director : string : 監督
  + coach : string : コーチ
  + trainer : string : トレーナー
  + doctor : string : ドクター
  + season_id : uuid : シーズンID
  + user_id : uuid : ユーザID
  + created_at : datetime : 作成日時
  + updated_at : datetime : 更新日時
}

entity "players" {
  + uuid : uuid : <<PK>>
  + name : string : 選手名
  + player_number : integer : 背番号
  + code : string : 選手コード
  + position : string : ポジション
  + weight : integer : 体重
  + height : integer : 身長
  + user_id : uuid : ユーザID
  + team_id : uuid : チームID
  + season_id : uuid : シーズンID
  + created_at : datetime : 作成日時
  + updated_at : datetime : 更新日時
}

entity "matchs" {
  + uuid : uuid : <<PK>>
  + home_team_id : uuid : ホームチームID
  + away_team_id : uuid : アウェイチームID
  + user_id : uuid : ユーザID
  + home_team_setter_position : string : ホームチームのセッターポジション
  + away_team_setter_position : string : アウェイチームのセッターポジション
}

entity "player_on_court" {
  + uuid : uuid : <<PK>>
  + player_id : uuid : 選手ID
  + match_id : uuid : 試合ID
  + on_court : boolean : コート上にいるかどうか
  + zone_code : string : ゾーンコード
  + setter : boolean : セッターかどうか
  + libero : boolean : リベロかどうか
}

' relation
users ||--o{ seasons
users ||--o{ matchs
users ||--o{ teams
users ||--o{ players
seasons ||--o{ teams
teams ||--o{ players
teams ||--o{ matchs
players ||--o{ player_on_court
matchs ||--o{ player_on_court
@enduml
